--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
     "babel-plugin-import-glob": "^2.0.0",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
-    "html-webpack-plugin": "^3.2.0",
+    "js-yaml": "^3.13.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "flexboxgrid": "^6.3.1",
+    "markdown-to-jsx": "^6.9.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0"
   }
 }
