--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buddhablog-cli": "^1.0.3",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.13.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
