--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A complete working buddhablog",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hotOnly --devtool eval-source-map --history-api-fallback --open",
+    "start": "NODE_ENV=development webpack-dev-server --hotOnly --devtool eval-source-map --history-api-fallback --open",
     "build": "webpack -p",
     "post": "buddha post",
     "page": "buddha page"
@@ -22,6 +22,12 @@
     "buddhablog-cli": "^1.0.3",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.13.1",
     "node-sass": "^4.11.0",
@@ -40,6 +46,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0"
   }
 }
