--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "post": "buddha post",
     "page": "buddha page"
   },
+  "reactSnap": {
+    "minifyHtml": {
+      "collapseWhitespace": false,
+      "removeComments": false
+    }
+  },
   "author": "Tim Sandberg <tasandberg@gmail.com>",
   "license": "ISC",
   "devDependencies": {
@@ -20,6 +26,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-import-glob": "^2.0.0",
     "buddhablog-cli": "^1.0.3",
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
@@ -32,6 +39,7 @@
     "js-yaml": "^3.13.1",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.8.4",
+    "react-snap": "^1.23.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
