--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --hotOnly --devtool eval-source-map --history-api-fallback --open",
-    "build": "webpack -p",
+    "build": "webpack -p && react-snap",
     "post": "buddha post",
     "page": "buddha page"
   },
