--- a/package.json
+++ b/package.json
@@ -13,33 +13,13 @@
   "author": "Tim Sandberg <tasandberg@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-import-glob": "^2.0.0",
-    "buddhablog-cli": "^1.0.3",
-    "clean-webpack-plugin": "^2.0.1",
-    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "js-yaml": "^3.13.1",
-    "node-sass": "^4.11.0",
-    "react-hot-loader": "^4.8.4",
-    "react-snap": "^1.23.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
