--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A complete working buddhablog",
   "main": "index.js",
   "scripts": {
-    "start": "yarn webpack-dev-server --history-api-fallback --open",
+    "start": "yarn webpack-dev-server --history-api-fallback --open --config ./webpack.dev.js",
     "post": "buddha post",
     "page": "buddha page",
     "test": "NODE_PATH=. ava ./test/"
@@ -36,7 +36,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
