--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "yarn webpack-dev-server --history-api-fallback --open --config ./webpack.dev.js",
+    "build": "webpack -p --config ./webpack.prod.js",
     "post": "buddha post",
     "page": "buddha page",
     "test": "NODE_PATH=. ava ./test/"
@@ -32,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "react-hot-loader": "^4.8.4",
+    "react-snap": "^1.23.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
